<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintTop_toBottomOf="@+id/textView"
    tools:context="com.auburnuniversity.www.logansproject.MainActivity">

    <LinearLayout
        android:id="@+id/speakText"
        android:layout_width="395dp"
        android:layout_height="587dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="-18dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/welcome_note"
            android:textAllCaps="true"
            android:textColor="@color/colorOrange"
            android:textSize="25dp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="6dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:text="@string/desc"
            tools:layout_editor_absoluteX="0dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="168dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorOrange"
            android:text="@string/WelcomePageButtonTitle"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:layout_editor_absoluteX="0dp" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
